--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+<link rel="manifest" href="/manifest.json">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="apple-mobile-web-app-title" content="Qibla">
   <meta charset="UTF-8">
-  <title>Qibla Compass</title>
+  <title>Кибла-намаз</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1,user-scalable=no">
   <style>
     body {
@@ -274,5 +278,19 @@
     drawCompass();
 
   </script>
+<script>
+  // Регистрация сервис-воркера
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', function() {
+      navigator.serviceWorker.register('/sw.js').then(function(registration) {
+        // Успешная регистрация
+        console.log('Service Worker registered with scope: ', registration.scope);
+      }).catch(function(err) {
+        // Ошибка регистрации
+        console.log('Service Worker registration failed: ', err);
+      });
+    });
+  }
+</script>
 </body>
 </html>
