--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <link rel="manifest" href="/manifest.json">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
-<meta name="apple-mobile-web-app-title" content="Qibla">
+<link rel="apple-touch-icon" href="icon-192.png">
+<meta name="apple-mobile-web-app-title" content="Qibla/Namaz">
   <meta charset="UTF-8">
-  <title>Кибла-намаз</title>
+  <title>Кибла/Намаз</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1,user-scalable=no">
   <style>
     body {
@@ -75,7 +76,7 @@
     </div>
     <div id="qiblaStatus">Ожидание данных...</div>
     <div id="qiblaAngle"></div>
-    <button id="permit" class="btn" style="display:none;">Включить компас (iPhone)</button>
+    <button id="permit" class="btn" style="display:none;">Включите компас, для работы (нажмите сюда)</button>
   </div>
   <div id="prayer-times"></div>
   <script>
