--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       ctx.lineTo(0, -R+29);
       ctx.lineTo(12, -R+34);
       ctx.closePath();
-      ctx.fillStyle = "#34cc87";
+      ctx.fillStyle = "#000000";
       ctx.shadowColor = "#aaffcc";
       ctx.shadowBlur = 12;
       ctx.fill();
