--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="manifest" href="/manifest.json">
 <meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="apple-mobile-web-app-status-bar-style" content="#FFFFFF">
 <link rel="apple-touch-icon" href="icon-192.png">
 <meta name="apple-mobile-web-app-title" content="Qibla/Namaz">
   <meta charset="UTF-8">
